# nano-agent

./: .gitignore  POSTMORTEM.md  README.md  pyproject.toml
agent/: __init__.py  agent.py  cli.py  cost_tracker.py  exceptions.py  logger.py  report.py  tool_registry.py  tools.py
eval/: run_eval.py  simulate_results.py  tasks.json
eval/fixtures/: data.csv  numbers.txt  sample.txt  template.txt
eval/fixtures/output/: data_upper.csv  hello.txt  meta.txt  rendered.txt  report.txt
eval/results/: BA-01.json  BA-02.json  BA-03.json  BA-04.json  BA-05.json  FM-01.json  FM-02.json  FM-03.json  FM-04.json  FM-05.json  MS-01.json  MS-02.json  MS-03.json  MS-04.json  MS-05.json  TR-01.json  TR-02.json  TR-03.json  TR-04.json  TR-05.json  summary.csv
scripts/: seed_demo_db.py
tests/: test_agent.py  test_cost_tracker.py  test_guards.py  test_logger.py  test_tool_registry.py  test_tools.py
