[project]
name = "nano-agent"
version = "0.1.0"
description = "A minimal LLM coding agent with tools, logging, and eval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
]

[project.scripts]
agent = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
